# lucy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  lucy.cpp  lucy.natvis  lucy.sln  main.cpp
cg-lib/: CMakeLists.txt  atom_flaw.cpp  atom_flaw.h  causal_graph.cpp  causal_graph.h  causal_graph_listener.cpp  causal_graph_listener.h  cg-lib.vcxproj  cg-lib.vcxproj.filters  cg-lib.wsd  cg_listener.cpp  cg_listener.h  disjunction_flaw.cpp  disjunction_flaw.h  enum_flaw.cpp  enum_flaw.h  flaw.cpp  flaw.h  propositional_agent.cpp  propositional_agent.h  propositional_state.cpp  propositional_state.h  resolver.cpp  resolver.h  reusable_resource.cpp  reusable_resource.h  smart_type.h  solver.cpp  solver.h  state_variable.cpp  state_variable.h  super_flaw.cpp  super_flaw.h  support_flaw.cpp  support_flaw.h  vtk_graph.cpp  vtk_graph.h
cg-lib/tests/: CMakeLists.txt  test_cg.cpp
core-lib/: CMakeLists.txt  atom.cpp  atom.h  cartesian_product.h  combinations.h  conjunction.cpp  conjunction.h  constructor.cpp  constructor.h  context.cpp  context.h  core-lib.vcxproj  core-lib.vcxproj.filters  core-lib.wsd  core.cpp  core.h  declaration.cpp  declaration.h  default_constructor.cpp  default_constructor.h  defined_conjunction.cpp  defined_conjunction.h  defined_constructor.cpp  defined_constructor.h  defined_method.cpp  defined_method.h  defined_predicate.cpp  defined_predicate.h  disjunction.cpp  disjunction.h  enum_type.cpp  enum_type.h  env.cpp  env.h  expression.cpp  expression.h  expression_visitor.cpp  expression_visitor.h  field.cpp  field.h  (+29 more)
core-lib/parser/: ratio.g4  ratioBaseListener.cpp  ratioBaseListener.h  ratioBaseVisitor.cpp  ratioBaseVisitor.h  ratioLexer.cpp  ratioLexer.h  ratioListener.cpp  ratioListener.h  ratioParser.cpp  ratioParser.h  ratioVisitor.cpp  ratioVisitor.h
examples/: blocks_2.rddl  blocks_3.rddl  blocks_4.rddl  blocks_5.rddl  blocks_6.rddl  blocks_7.rddl  blocks_8.rddl  blocks_9.rddl  example_0.rddl  example_1.rddl
examples/cc/: cc_domain.rddl  cc_problem_1_001.rddl  cc_problem_1_002.rddl
examples/logistics/: logistics_domain.rddl
examples/logistics_state_variables/: logistics_domain.rddl  logistics_problem_0.rddl
examples/tms/: tms_domain.rddl  tms_problem_1_001.rddl  tms_problem_1_002.rddl
gui/: CausalGraph.java  SATCore.java  StateVariable.java  Timeline.java  TimelineViewer.java  cg_java_listener.cpp  cg_java_listener.h  cg_lava_listener.cpp  java_gui.cpp  java_gui.h  sat_java_listener.cpp  sat_java_listener.h
gui/lib/: license-prefuse.txt
gui/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
gui/src/it/cnr/istc/ratio/gui/: ArithItem.java  Atom.java  AtomState.java  BoolItem.java  CausalGraphDisplay.java  EnumItem.java  Flaw.java  Item.java  LBool.java  Resolver.java  State.java  StateTreeCellRenderer.java  StateTreeModel.java
lucy/: lucy.vcxproj  main.cpp
smt-lib/: CMakeLists.txt  clause.cpp  clause.h  inf_rational.h  interval.cpp  interval.h  la_constr.cpp  la_constr.h  la_listener.h  la_theory.cpp  la_theory.h  la_value_listener.h  lin.cpp  lin.h  lit.cpp  lit.h  log.h  ov_theory.cpp  ov_theory.h  rational.cpp  rational.h  sat_core.cpp  sat_core.h  sat_listener.h  sat_value_listener.h  set_listener.h  set_theory.cpp  set_theory.h  set_value_listener.h  smt-lib.vcxproj  smt-lib.vcxproj.filters  smt-lib.wsd  theory.cpp  theory.h  utils.h  visibility.h
smt-lib/tests/: CMakeLists.txt  test_la_0.cpp  test_la_1.cpp  test_la_2.cpp  test_la_prop.cpp  test_sat_0.cpp  test_sat_1.cpp  test_sat_2.cpp  test_smt.cpp  test_theory_propagation.cpp
test/: cg_test.cpp  smt_test.cpp  stdafx.h  test.vcxproj  test.vcxproj.filters
translators/pddl2ratio/: build.xml
translators/pddl2ratio/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
translators/pddl2ratio/src/it/cnr/istc/translators/pddl2ratio/language/: Action.java  AlwaysTerm.java  AlwaysWithinTerm.java  AndTerm.java  AssignOpTerm.java  AtEndTerm.java  AtMostOnceTerm.java  AtStartTerm.java  AtTerm.java  ComparisonTerm.java  Constant.java  ConstantTerm.java  Domain.java  DurativeAction.java  EitherType.java  EqTerm.java  ExistsTerm.java  ForAllTerm.java  Function.java  FunctionTerm.java  HoldAfterTerm.java  HoldDuringTerm.java  MinusTerm.java  NumberTerm.java  OpTerm.java  OrTerm.java  OverAllTerm.java  Predicate.java  PredicateTerm.java  PreferenceTerm.java  Problem.java  SometimeAfterTerm.java  SometimeBeforeTerm.java  SometimeTerm.java  Term.java  Type.java  Variable.java  VariableTerm.java  WhenTerm.java  WithinTerm.java
translators/pddl2ratio/src/it/cnr/istc/translators/pddl2ratio/parser/: ActionRenderer.java  DurativeActionRenderer.java  FunctionRenderer.java  PDDL.tokens  PDDLBaseListener.java  PDDLBaseVisitor.java  PDDLInstance.java  PDDLLexer.java  PDDLListener.java  PDDLParser.java  PDDLRequirements.java  PDDLVisitor.java  PredicateRenderer.java  TermRenderer.java  TermVisitor.java  Translator.java  TypedListVariableListener.java  Utils.java
translators/pddl2ratio/test/it/cnr/istc/translators/pddl2ratio/parser/: TranslatorTest.java
