cmake_minimum_required(VERSION 3.7)

project ( lucy VERSION 0.1 LANGUAGES CXX )

find_package( Java )
find_package( JNI )

option( BUILD_GUI "Build GUI" OFF )
message( "Support for GUI: " ${BUILD_GUI} )

if ( BUILD_GUI )
  include( UseJava )
  file( GLOB GUI_SOURCES "gui/*.java" )
  set(CMAKE_JAVA_INCLUDE_PATH gui/lib/prefuse.jar)
  add_jar( lucy_gui ${GUI_SOURCES} )
  configure_file(gui/lib/prefuse.jar ${CMAKE_BINARY_DIR}/prefuse.jar COPYONLY)

  add_definitions( -DBUILD_GUI )
  file( GLOB SOURCES main.cpp "smt-lib/*.cpp" "core-lib/*.cpp" "cg-lib/*.cpp" "gui/*.cpp" )
  include_directories( ${CMAKE_SOURCE_DIR}/smt-lib ${CMAKE_SOURCE_DIR}/core-lib ${CMAKE_SOURCE_DIR}/cg-lib ${CMAKE_SOURCE_DIR}/gui ${JNI_INCLUDE_DIRS} )
else()
  file( GLOB SOURCES main.cpp "smt-lib/*.cpp" "core-lib/*.cpp" "cg-lib/*.cpp" )
  include_directories( ${CMAKE_SOURCE_DIR}/smt-lib ${CMAKE_SOURCE_DIR}/core-lib ${CMAKE_SOURCE_DIR}/cg-lib )
endif()

configure_file(cg-lib/init.rddl ${CMAKE_BINARY_DIR}/init.rddl COPYONLY)

add_executable( ${PROJECT_NAME} ${SOURCES} )

if( BUILD_GUI )
  target_link_libraries( ${PROJECT_NAME} ${JNI_LIBRARIES} )
endif()

include(CTest)
enable_testing()

add_test( NAME TestCG COMMAND ${PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestCG0 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/example_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestCG1 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/example_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestCG2 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_heuristic_failure_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestCG3 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_heuristic_failure_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
set_tests_properties( TestCG2 TestCG3 PROPERTIES WILL_FAIL TRUE )
add_test( NAME TestCG4 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_heuristic_failure_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestCG5 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_heuristic_failure_3.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestSV0 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_sv_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestSV1 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_sv_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestSV2 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_sv_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestRR0 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_rr_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestRR1 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/test_rr_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks02 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_02.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks03 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_03.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks04 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_04.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks05 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_05.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks06 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_06.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks07 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_07.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks08 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_08.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks09 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_09.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks10 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_10.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks11 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_11.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks12 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_12.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME CookingCarbonara01 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/cc/cc_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/cc/cc_problem_1_001.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TemporalMachineShop01 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/tms/tms_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/tms/tms_problem_1_001.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestLogistics00 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_problem_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestLogistics01 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_problem_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestLogistics02 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_problem_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestLogisticsSV00 COMMAND ${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/examples/logistics_state_variables/logistics_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/logistics_state_variables/logistics_problem_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)